<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.technovadors.vinitjain.voratdirectory.LoginRegister.Login">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorPrimaryDark"
        android:elevation="2dp"
        android:gravity="center"
        android:text="@string/login_header"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">

        <EditText
            android:id="@+id/id"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:imeOptions="actionNext"
            android:background="@null"
            android:hint="@string/member_id"
            android:singleLine="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#F0f0f0" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:inputType="textPassword"
                android:background="@null"
                android:imeOptions="actionDone"
                android:hint="@string/password"
                android:singleLine="true" />

            <ImageButton
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:scaleType="centerInside"
                android:padding="10dp"
                android:src="@drawable/show_password_grey"
                android:id="@+id/show_password"
                android:background="#00000000" />
        </LinearLayout>


        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:text="@string/continue_to_login"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="6dp"
            android:text="@string/unable_to_login"
            android:textColor="@color/colorPrimaryDark" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/not_a_member_yet" />

        <TextView
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/register_now"
            android:textColor="@color/colorAccent"
            android:textSize="17sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/about_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="6dp"
            android:text="@string/about_us"
            android:textColor="@color/colorAccent" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:layout_margin="6dp"
            android:background="#CCCCCC" />

        <TextView
            android:id="@+id/contact_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="6dp"
            android:text="@string/contact_us"
            android:textColor="@color/colorAccent" />

    </LinearLayout>


</LinearLayout>
