<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context="com.technovadors.vinitjain.voratdirectory.Home.Fragments.gaav_list">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/service_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/service_1_image"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:padding="11dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/train_home" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginLeft="6dp"
                        android:gravity="center_vertical"
                        android:text="@string/service_1_title"
                        android:textColor="@color/colorAccent"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/service_1_description"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:paddingBottom="6dp"
                        android:paddingLeft="10dp"
                        android:text="@string/service_1_description"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="15sp"
                        android:visibility="gone" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/service_1_toggle"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/next_normal" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#F0F0F0" />

            <LinearLayout
                android:id="@+id/service_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/service_2_image"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:padding="11dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/mobile_recharge_home" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginLeft="6dp"
                        android:gravity="center_vertical"
                        android:text="@string/service_2_title"
                        android:textColor="@color/colorAccent"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/service_2_description"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:paddingBottom="6dp"
                        android:paddingLeft="10dp"
                        android:text="@string/service_2_description"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="15sp"
                        android:visibility="gone" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/service_2_toggle"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/next_normal" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#F0F0F0" />

            <LinearLayout
                android:id="@+id/service_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/service_3_image"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:padding="11dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/food_services_home" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginLeft="6dp"
                        android:gravity="center_vertical"
                        android:text="@string/service_3_title"
                        android:textColor="@color/colorAccent"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/service_3_description"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:paddingBottom="6dp"
                        android:paddingLeft="10dp"
                        android:text="@string/service_3_description"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="15sp"
                        android:visibility="gone" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/service_3_toggle"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/next_normal" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#F0F0F0" />

            <LinearLayout
                android:id="@+id/service_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/service_4_image"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:padding="9dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/taxi_home" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginLeft="6dp"
                        android:gravity="center_vertical"
                        android:text="@string/service_4_title"
                        android:textColor="@color/colorAccent"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/service_4_description"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:paddingBottom="6dp"
                        android:paddingLeft="10dp"
                        android:text="@string/service_4_description"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="15sp"
                        android:visibility="gone" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/service_4_toggle"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/next_normal" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#F0F0F0" />

            <LinearLayout
                android:id="@+id/service_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/service_5_image"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:padding="10dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/jain_home" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginLeft="6dp"
                        android:gravity="center_vertical"
                        android:text="@string/service_5_title"
                        android:textColor="@color/colorAccent"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/service_5_description"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:paddingBottom="6dp"
                        android:paddingLeft="10dp"
                        android:text="@string/service_5_description"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="15sp"
                        android:visibility="gone" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/service_5_toggle"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/next_normal" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
