<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.technovadors.vinitjain.voratdirectory.Directory.Gaav">

    <LinearLayout
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/family_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="450"
            android:textColor="@color/white"
            android:textSize="38sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gaav_familes_registered_counting"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </LinearLayout>


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="180dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="3dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="6dp">


                <LinearLayout
                    android:id="@+id/about_us"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/gaav_about_us"
                        android:textColor="@color/colorAccent"
                        android:textSize="17sp" />

                    <ImageButton
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="#00000000"
                        android:src="@drawable/next_normal" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_margin="6dp"
                    android:background="#F0F0F0" />

                <LinearLayout
                    android:id="@+id/view_parivar"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/gaav_view_parivar"
                        android:textColor="@color/colorAccent"
                        android:textSize="17sp" />

                    <ImageButton
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="#00000000"
                        android:src="@drawable/next_normal" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_margin="6dp"
                    android:background="#F0F0F0" />

                <LinearLayout
                    android:id="@+id/register_family"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/gaav_register_your_family"
                        android:textColor="@color/colorAccent"
                        android:textSize="17sp" />

                    <ImageButton
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="#00000000"
                        android:src="@drawable/next_normal" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_margin="6dp"
                    android:background="#F0F0F0" />

                <LinearLayout
                    android:id="@+id/mitra_mandals"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/gaav_mitra_mandal"
                        android:textColor="@color/colorAccent"
                        android:textSize="17sp" />

                    <ImageButton
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="#00000000"
                        android:src="@drawable/next_normal" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_margin="6dp"
                    android:background="#F0F0F0" />

                <LinearLayout
                    android:id="@+id/contact_us"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/gaav_contact_details"
                        android:textColor="@color/colorAccent"
                        android:textSize="17sp" />

                    <ImageButton
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="#00000000"
                        android:src="@drawable/next_normal" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>
    </android.support.v7.widget.CardView>


    <ImageButton
        android:id="@+id/back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="#00000000"
        android:src="@drawable/back_white" />

</RelativeLayout>
